--- a/SpringMVC_1/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/SpringMVC_1/src/main/webapp/WEB-INF/views/first/hello.html
@@ -8,5 +8,8 @@
 Hello!
 
 <a href="/first/goodbye"> Say goodbye</a> or <a href="/exit">Exit</a>
+<a href="/first/hello?name=Elon&surname=Musk">Request with parameters</a>
+
+<p th:text="${message}"/>
 </body>
 </html>
